8231289: Disentangle JvmtiRawMonitor from ObjectMonitor and clean it up

Reviewed-by: sspitsyn, dcubed, coleenp