src/hotspot/share/prims/jvmtiRawMonitor.hpp
@@ -25,7 +25,8 @@
 #ifndef SHARE_PRIMS_JVMTIRAWMONITOR_HPP
 #define SHARE_PRIMS_JVMTIRAWMONITOR_HPP
 
-#include "runtime/objectMonitor.hpp"
+#include "memory/allocation.hpp"
+#include "runtime/park.hpp"
 #include "utilities/growableArray.hpp"
 
 //
@@ -33,31 +34,69 @@
 //
 // Used by JVMTI methods: All RawMonitor methods (CreateRawMonitor, EnterRawMonitor, etc.)
 //
-// Wrapper for ObjectMonitor class that saves the Monitor's name
+// A simplified version of the ObjectMonitor code.
 //
 
-class JvmtiRawMonitor : public ObjectMonitor  {
-private:
+class JvmtiRawMonitor : public CHeapObj<mtSynchronizer>  {
+
+  // Helper class to allow Threads to be linked into queues.
+  // This is a stripped down version of ObjectWaiter.
+  class QNode : public StackObj {
+    friend class JvmtiRawMonitor;
+    enum TStates { TS_READY, TS_RUN, TS_WAIT, TS_ENTER };
+    QNode* volatile _next;
+    QNode* volatile _prev;
+    ParkEvent *   _event;
+    volatile int  _notified;
+    volatile TStates TState;
+
+    QNode(Thread* thread);
+  };
+
+  Thread* volatile _owner;          // pointer to owning thread
+  volatile int _recursions;         // recursion count, 0 for first entry
+  QNode* volatile _EntryList;       // Threads blocked on entry or reentry.
+                                    // The list is actually composed of nodes,
+                                    // acting as proxies for Threads.
+  QNode* volatile _WaitSet;         // Threads wait()ing on the monitor
+  volatile jint  _waiters;          // number of waiting threads
   int           _magic;
   char *        _name;
   // JVMTI_RM_MAGIC is set in contructor and unset in destructor.
   enum { JVMTI_RM_MAGIC = (int)(('T' << 24) | ('I' << 16) | ('R' << 8) | 'M') };
 
-  int       SimpleEnter (Thread * Self) ;
-  int       SimpleExit  (Thread * Self) ;
+  void      SimpleEnter (Thread * Self) ;
+  void      SimpleExit  (Thread * Self) ;
   int       SimpleWait  (Thread * Self, jlong millis) ;
-  int       SimpleNotify (Thread * Self, bool All) ;
+  void      SimpleNotify(Thread * Self, bool All) ;
 
 public:
+
+  // return codes
+  enum {
+    M_OK,                    // no error
+    M_ILLEGAL_MONITOR_STATE, // IllegalMonitorStateException
+    M_INTERRUPTED            // Thread.interrupt()
+  };
+
+  // Non-aborting operator new
+  void* operator new(size_t size) throw() {
+    return CHeapObj::operator new(size, std::nothrow);
+  }
+
   JvmtiRawMonitor(const char *name);
   ~JvmtiRawMonitor();
-  int       raw_enter(TRAPS);
-  int       raw_exit(TRAPS);
-  int       raw_wait(jlong millis, bool interruptable, TRAPS);
-  int       raw_notify(TRAPS);
-  int       raw_notifyAll(TRAPS);
-  int            magic()   { return _magic;  }
-  const char *get_name()   { return _name; }
+
+  Thread *  owner() const { return _owner; }
+  void      set_owner(Thread * owner) { _owner = owner; }
+  int       recursions() const { return _recursions; }
+  void      raw_enter(Thread * Self);
+  int       raw_exit(Thread * Self);
+  int       raw_wait(jlong millis, bool interruptable, Thread * Self);
+  int       raw_notify(Thread * Self);
+  int       raw_notifyAll(Thread * Self);
+  int       magic() const { return _magic;  }
+  const char *get_name() const { return _name; }
   bool        is_valid();
 };
 
